--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -220,23 +220,23 @@ allow_embedding = true
 #################################### Users ###############################
 [users]
 # disable user signup / registration
-;allow_sign_up = true
+allow_sign_up = true
 
 # Allow non admin users to create organizations
-;allow_org_create = true
+allow_org_create = true
 
 # Set to true to automatically assign new users to the default organization (id 1)
-;auto_assign_org = true
+auto_assign_org = true
 
 # Default role new users will be automatically assigned (if disabled above is set to true)
-;auto_assign_org_role = Viewer
+auto_assign_org_role = Admin
 
 # Background text for the user field on the login page
 ;login_hint = email or username
 ;password_hint = password
 
 # Default UI theme ("dark" or "light")
-;default_theme = dark
+default_theme = light
 
 # External user management, these options affect the organization users view
 ;external_manage_link_url =
@@ -244,10 +244,10 @@ allow_embedding = true
 ;external_manage_info =
 
 # Viewers can edit/inspect dashboard settings in the browser. But not save the dashboard.
-;viewers_can_edit = false
+viewers_can_edit = true
 
 # Editors can administrate dashboard, folders and teams they create
-;editors_can_admin = false
+editors_can_admin = true
 
 [auth]
 # Login cookie name
@@ -263,22 +263,22 @@ allow_embedding = true
 ;token_rotation_interval_minutes = 10
 
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-;disable_login_form = false
+disable_login_form = false
 
 # Set to true to disable the signout link in the side menu. useful if you use auth.proxy, defaults to false
-;disable_signout_menu = false
+disable_signout_menu = true
 
 # URL to redirect the user to after sign out
-;signout_redirect_url =
+signout_redirect_url = http://localhost:18443/grafana/
 
 # Set to true to attempt login with OAuth automatically, skipping the login screen.
 # This setting is ignored if multiple OAuth providers are configured.
-;oauth_auto_login = false
+oauth_auto_login = true
 
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-;enabled = false
+enabled = false
 
 # specify organization name that should be used for unauthenticated users
 ;org_name = Main Org.
@@ -333,6 +333,22 @@ allow_embedding = true
 ; This might be required if the OAuth provider is not RFC6749 compliant, only supporting credentials passed via POST payload
 ;send_client_credentials_via_post = false
 
+enabled = true
+name = OAuth
+allow_sign_up = true
+client_id = broker
+client_secret = 91fff12e-9b97-4028-8705-ffd8126fba3f
+scopes = openid profile email
+auth_url = http://localhost:18443/auth/realms/pontus/protocol/openid-connect/auth
+token_url = http://localhost:18443/auth/realms/pontus/protocol/openid-connect/token
+api_url = http://localhost:18443/auth/realms/pontus/protocol/openid-connect/userinfo
+;auth_url  = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/auth
+;token_url = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/token
+;api_url   = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/userinfo
+hosted_domain = http://localhost:18443
+
+
+
 #################################### Grafana.com Auth ####################
 [auth.grafana_com]
 ;enabled = false
@@ -384,7 +400,7 @@ allow_embedding = true
 [log]
 # Either "console", "file", "syslog". Default is console and  file
 # Use space to separate multiple modes, e.g. "console file"
-;mode = console file
+mode = console
 
 # Either "debug", "info", "warn", "error", "critical", default is "info"
 ;level = info
