--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -5,6 +5,8 @@ COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana-pontus.ini
 USER root
 RUN ln -s /usr/share/grafana/public /usr/share/grafana/grafana && \
     apt-get update -y && apt install -y netcat
+
    
 USER grafana
+RUN grafana-cli plugins install agenty-flowcharting-panel
 EXPOSE 3000
