--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -172,7 +172,7 @@ log_queries =
 ;cookie_secure = false
 
 # set cookie SameSite attribute. defaults to `lax`. can be set to "lax", "strict" and "none"
-;cookie_samesite = lax
+cookie_samesite = disabled
 
 # set to true if you want to allow browsers to render Grafana in a <frame>, <iframe>, <embed> or <object>. default is false.
 ;allow_embedding = false
@@ -182,7 +182,7 @@ allow_embedding = true
 # This is only sent when HTTPS is enabled in this configuration.
 # HSTS tells browsers that the site should only be accessed using HTTPS.
 # The default version will change to true in the next minor release, 6.3.
-;strict_transport_security = false
+strict_transport_security = false
 
 # Sets how long a browser should cache HSTS. Only applied if strict_transport_security is enabled.
 ;strict_transport_security_max_age_seconds = 86400
@@ -200,7 +200,7 @@ allow_embedding = true
 
 # Set to true to enable the X-XSS-Protection header, which tells browsers to stop pages from loading
 # when they detect reflected cross-site scripting (XSS) attacks. The default will change to true in the next minor release, 6.3.
-;x_xss_protection = false
+x_xss_protection = false
 
 #################################### Snapshots ###########################
 [snapshots]
