--- a/grafana-pt/Dockerfile
+++ b/grafana-pt/Dockerfile
@@ -1,4 +1,5 @@
-FROM grafana/grafana:6.2.5
+FROM grafana/grafana:7.3.7-ubuntu
+#FROM grafana/grafana:6.2.5
 COPY --chown=grafana:grafana grafana.db /var/lib/grafana/
 COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana.ini
 COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana-pontus.ini
