--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,5 +1,6 @@
 #FROM grafana/grafana:6.6.2-ubuntu
-FROM grafana/grafana:7.1.0-ubuntu
+#FROM grafana/grafana:7.1.0-ubuntu
+FROM grafana/grafana:7.3.7-ubuntu
 USER root
 RUN ln -s /usr/share/grafana/public /usr/share/grafana/grafana && \
     apt-get update -y && apt install -y netcat-traditional
