--- a/grafana-pt/Dockerfile
+++ b/grafana-pt/Dockerfile
@@ -1,5 +1,6 @@
 #FROM grafana/grafana:7.3.7-ubuntu
-FROM grafana/grafana:7.4.3-ubuntu
+#FROM grafana/grafana:7.4.3-ubuntu
+FROM grafana/grafana:7.5.2-ubuntu
 #FROM grafana/grafana:6.2.5
 USER root
 RUN ln -s /usr/share/grafana/public /usr/share/grafana/grafana && \
