--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -18,7 +18,8 @@ COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana.ini
 COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana-pontus.ini
 
 EXPOSE 3000
-COPY --chown=grafana:grafana --from=pontusvisiongdpr/pontus-grafana-react-panel:1.13.2 /var/lib/grafana/plugins/grafana/pontus-panel/ /var/lib/grafana/plugins/grafana/pontus-panel/
+ARG FORCE_REACT_PANEL=1 
+COPY  --chown=grafana:grafana  --from=pontusvisiongdpr/pontus-grafana-react-panel:1.13.2  /var/lib/grafana/plugins/grafana/pontus-panel/ /var/lib/grafana/plugins/grafana/pontus-panel/
 #COPY --chown=grafana:grafana --from=pontusvisiongdpr/pontus-grafana-orientdb-datasource:latest /grafana-orientdb-plugin/dist /var/lib/grafana/plugins/grafana/pontus-grafana-orientdb-datasource/
 #COPY --chown=grafana:grafana ./algenty-grafana-flowcharting-0.6.0-6-gfee0569.zip /var/lib/grafana/plugins/grafana/
 #USER root
