--- a/grafana/Dockerfile.template
+++ b/grafana/Dockerfile.template
@@ -20,7 +20,8 @@ COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana-pontus.ini
 EXPOSE 3000
 
 ARG FORCE_REACT_PANEL=1 
-
+ENV FORCE_REACT_PANEL=${FORCE_REACT_PANEL}
+RUN echo ${FORCE_REACT_PANEL}
 COPY  --chown=grafana:grafana  --from=pontusvisiongdpr/pontus-grafana-react-panel:${TAG}  /var/lib/grafana/plugins/grafana/pontus-panel/ /var/lib/grafana/plugins/grafana/pontus-panel/
 #COPY --chown=grafana:grafana --from=pontusvisiongdpr/pontus-grafana-orientdb-datasource:latest /grafana-orientdb-plugin/dist /var/lib/grafana/plugins/grafana/pontus-grafana-orientdb-datasource/
 #COPY --chown=grafana:grafana ./algenty-grafana-flowcharting-0.6.0-6-gfee0569.zip /var/lib/grafana/plugins/grafana/
