--- a/grafana-lambda/grafana.ini
+++ b/grafana-lambda/grafana.ini
@@ -12,7 +12,7 @@
 #################################### Paths ####################################
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
-;data = /var/lib/grafana
+data = /mnt/grafana
 
 # Temporary files in `data` directory older than given duration will be removed
 ;temp_data_lifetime = 24h
@@ -38,23 +38,25 @@
 ;http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-;domain = localhost
+domain = ${PV_EXT_DOMAIN}
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
-;enforce_domain = false
+enforce_domain = true
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
 ;root_url = http://localhost:18443/grafana
-root_url = /grafana/
+root_url = https://${PV_EXT_DOMAIN}/grafana/
+serve_from_sub_path = true
+
 
 # Log web requests
 ;router_logging = false
 
 # the path relative working path
+;static_root_path = public
 ;static_root_path = grafana
-static_root_path = public
 
 # enable gzip
 ;enable_gzip = false
@@ -133,14 +135,14 @@ log_queries =
 # No ip addresses are being tracked, only simple counters to track
 # running instances, dashboard and error counts. It is very helpful to us.
 # Change this option to false to disable reporting.
-;reporting_enabled = true
+reporting_enabled = false
 
 # Set to false to disable all checks to https://grafana.net
 # for new vesions (grafana itself and plugins), check is used
 # in some UI views to notify that grafana or plugin update exists
 # This option does not cause any auto updates, nor send any information
 # only a GET request to http://grafana.com to get latest versions
-;check_for_updates = true
+check_for_updates = false
 
 # Google Analytics universal tracking code, only enabled if you specify an id here
 ;google_analytics_ua_id =
@@ -172,7 +174,8 @@ log_queries =
 ;cookie_secure = false
 
 # set cookie SameSite attribute. defaults to `lax`. can be set to "lax", "strict" and "none"
-cookie_samesite = disabled
+;cookie_samesite = disabled
+cookie_samesite = lax
 
 # set to true if you want to allow browsers to render Grafana in a <frame>, <iframe>, <embed> or <object>. default is false.
 ;allow_embedding = false
@@ -269,7 +272,7 @@ disable_login_form = false
 disable_signout_menu = true
 
 # URL to redirect the user to after sign out
-signout_redirect_url = http://localhost:18443/grafana/
+signout_redirect_url = https://${PV_EXT_DOMAIN}/grafana/
 
 # Set to true to attempt login with OAuth automatically, skipping the login screen.
 # This setting is ignored if multiple OAuth providers are configured.
@@ -337,15 +340,15 @@ enabled = true
 name = OAuth
 allow_sign_up = true
 client_id = broker
-client_secret = 91fff12e-9b97-4028-8705-ffd8126fba3f
+client_secret = ${PV_CLIENT_SECRET}
 scopes = openid profile email
-auth_url = http://localhost:18443/auth/realms/pontus/protocol/openid-connect/auth
-token_url = http://localhost:18443/auth/realms/pontus/protocol/openid-connect/token
-api_url = http://localhost:18443/auth/realms/pontus/protocol/openid-connect/userinfo
+auth_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/auth
+token_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/token
+api_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/userinfo
 ;auth_url  = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/auth
 ;token_url = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/token
 ;api_url   = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/userinfo
-hosted_domain = http://localhost:18443
+hosted_domain = ${PV_EXT_DOMAIN}
 
 
 
@@ -370,7 +373,7 @@ hosted_domain = http://localhost:18443
 
 #################################### Basic Auth ##########################
 [auth.basic]
-;enabled = true
+enabled = false
 
 #################################### Auth LDAP ##########################
 [auth.ldap]
@@ -404,6 +407,7 @@ mode = console
 
 # Either "debug", "info", "warn", "error", "critical", default is "info"
 ;level = info
+level = debug
 
 # optional settings to set different levels for specific loggers. Ex filters = sqlstore:debug
 ;filters =
@@ -489,7 +493,7 @@ mode = console
 # Metrics available at HTTP API Url /metrics
 [metrics]
 # Disable / Enable internal metrics
-;enabled           = true
+enabled           = false
 
 # Publish interval
 ;interval_seconds  = 10
