--- a/grafana-lambda/grafana.ini
+++ b/grafana-lambda/grafana.ini
@@ -29,13 +29,13 @@ data = /mnt/grafana
 #################################### Server ####################################
 [server]
 # Protocol (http, https, socket)
-;protocol = http
+protocol = http
 
 # The ip address to bind to, empty will bind to all interfaces
-;http_addr =
+http_addr = 0.0.0.0
 
 # The http port  to use
-;http_port = 3000
+http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
 domain = ${PV_EXT_DOMAIN}
@@ -43,6 +43,7 @@ domain = ${PV_EXT_DOMAIN}
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
 enforce_domain = true
+;enforce_domain = false
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
@@ -52,10 +53,10 @@ serve_from_sub_path = true
 
 
 # Log web requests
-;router_logging = false
+router_logging = true
 
 # the path relative working path
-;static_root_path = public
+static_root_path = public
 ;static_root_path = grafana
 
 # enable gzip
@@ -101,7 +102,7 @@ serve_from_sub_path = true
 ;conn_max_lifetime = 14400
 
 # Set to true to log the sql calls and execution times.
-log_queries =
+log_queries = true
 
 # For "sqlite3" only. cache mode setting used for connecting to the database. (private, shared)
 ;cache_mode = private
@@ -121,7 +122,7 @@ log_queries =
 [dataproxy]
 
 # This enables data proxy logging, default is false
-;logging = false
+logging = true
 
 # How long the data proxy should wait before timing out default is 30 (seconds)
 ;timeout = 30
@@ -171,21 +172,23 @@ check_for_updates = false
 ;disable_brute_force_login_protection = false
 
 # set to true if you host Grafana behind HTTPS. default is false.
-;cookie_secure = false
+cookie_secure = false
+;cookie_secure = true
 
 # set cookie SameSite attribute. defaults to `lax`. can be set to "lax", "strict" and "none"
 ;cookie_samesite = disabled
 cookie_samesite = lax
 
 # set to true if you want to allow browsers to render Grafana in a <frame>, <iframe>, <embed> or <object>. default is false.
-;allow_embedding = false
-allow_embedding = true
+allow_embedding = false
+;allow_embedding = true
 
 # Set to true if you want to enable http strict transport security (HSTS) response header.
 # This is only sent when HTTPS is enabled in this configuration.
 # HSTS tells browsers that the site should only be accessed using HTTPS.
 # The default version will change to true in the next minor release, 6.3.
 strict_transport_security = false
+;strict_transport_security = true
 
 # Sets how long a browser should cache HSTS. Only applied if strict_transport_security is enabled.
 ;strict_transport_security_max_age_seconds = 86400
@@ -203,7 +206,8 @@ strict_transport_security = false
 
 # Set to true to enable the X-XSS-Protection header, which tells browsers to stop pages from loading
 # when they detect reflected cross-site scripting (XSS) attacks. The default will change to true in the next minor release, 6.3.
-x_xss_protection = false
+;x_xss_protection = false
+x_xss_protection = true
 
 #################################### Snapshots ###########################
 [snapshots]
@@ -223,7 +227,8 @@ x_xss_protection = false
 #################################### Users ###############################
 [users]
 # disable user signup / registration
-allow_sign_up = true
+;allow_sign_up = true
+allow_sign_up = false
 
 # Allow non admin users to create organizations
 allow_org_create = true
@@ -266,16 +271,21 @@ editors_can_admin = true
 ;token_rotation_interval_minutes = 10
 
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-disable_login_form = false
+;disable_login_form = false
+disable_login_form = true
 
 # Set to true to disable the signout link in the side menu. useful if you use auth.proxy, defaults to false
-disable_signout_menu = true
+disable_signout_menu = false
+;disable_signout_menu = true
 
 # URL to redirect the user to after sign out
-signout_redirect_url = https://${PV_EXT_DOMAIN}/grafana/
+;signout_redirect_url = https://${PV_EXT_DOMAIN}/grafana
+signout_redirect_url = https://${PV_AUTH_DOMAIN}/logout?client_id=${PV_CLIENT_ID}&logout_uri=https://${PV_EXT_DOMAIN}/grafana&redirect_uri=https://${PV_EXT_DOMAIN}/grafana/&response_type=code&scope=openid+profile+email
+
 
 # Set to true to attempt login with OAuth automatically, skipping the login screen.
 # This setting is ignored if multiple OAuth providers are configured.
+;oauth_auto_login = true
 oauth_auto_login = true
 
 #################################### Anonymous Auth ######################
@@ -338,13 +348,18 @@ enabled = false
 
 enabled = true
 name = OAuth
+;allow_sign_up = false
 allow_sign_up = true
-client_id = broker
+;client_id = broker
+client_id = ${PV_CLIENT_ID}
 client_secret = ${PV_CLIENT_SECRET}
-scopes = openid profile email
-auth_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/auth
-token_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/token
-api_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/userinfo
+scopes = openid profile email aws.cognito.signin.user.admin
+auth_url = https://${PV_AUTH_DOMAIN}/oauth2/authorize
+token_url = https://${PV_AUTH_DOMAIN}/oauth2/token
+api_url = https://${PV_AUTH_DOMAIN}/oauth2/userInfo
+;auth_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/auth
+;token_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/token
+;api_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/userinfo
 ;auth_url  = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/auth
 ;token_url = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/token
 ;api_url   = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/userinfo
@@ -415,6 +430,7 @@ level = debug
 # For "console" mode only
 [log.console]
 ;level =
+level = debug
 
 # log line format, valid options are text, console and json
 ;format = console
