--- a/grafana-lambda/grafana.ini
+++ b/grafana-lambda/grafana.ini
@@ -354,12 +354,12 @@ allow_sign_up = true
 client_id = ${PV_CLIENT_ID}
 client_secret = ${PV_CLIENT_SECRET}
 scopes = openid profile email aws.cognito.signin.user.admin
-auth_url = https://${PV_AUTH_DOMAIN}/oauth2/authorize
-token_url = https://${PV_AUTH_DOMAIN}/oauth2/token
-api_url = https://${PV_AUTH_DOMAIN}/oauth2/userInfo
-;auth_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/auth
-;token_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/token
-;api_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/userinfo
+#auth_url = https://${PV_AUTH_DOMAIN}/oauth2/authorize
+#token_url = https://${PV_AUTH_DOMAIN}/oauth2/token
+#api_url = https://${PV_AUTH_DOMAIN}/oauth2/userInfo
+auth_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/auth
+token_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/token
+api_url = https://${PV_EXT_DOMAIN}/auth/realms/pontus/protocol/openid-connect/userinfo
 ;auth_url  = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/auth
 ;token_url = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/token
 ;api_url   = http://pontus-comply-keycloak:8080/auth/realms/pontus/protocol/openid-connect/userinfo
