--- a/grafana-lambda/grafana.ini
+++ b/grafana-lambda/grafana.ini
@@ -279,8 +279,8 @@ disable_signout_menu = false
 ;disable_signout_menu = true
 
 # URL to redirect the user to after sign out
-;signout_redirect_url = https://${PV_EXT_DOMAIN}/grafana
-signout_redirect_url = https://${PV_AUTH_DOMAIN}/logout?client_id=${PV_CLIENT_ID}&logout_uri=https://${PV_EXT_DOMAIN}/grafana&redirect_uri=https://${PV_EXT_DOMAIN}/grafana/&response_type=code&scope=openid+profile+email
+signout_redirect_url = https://${PV_EXT_DOMAIN}/grafana
+;signout_redirect_url = https://${PV_AUTH_DOMAIN}/logout?client_id=${PV_CLIENT_ID}&logout_uri=https://${PV_EXT_DOMAIN}/grafana&redirect_uri=https://${PV_EXT_DOMAIN}/grafana/&response_type=code&scope=openid+profile+email
 
 
 # Set to true to attempt login with OAuth automatically, skipping the login screen.
@@ -353,7 +353,8 @@ allow_sign_up = true
 ;client_id = broker
 client_id = ${PV_CLIENT_ID}
 client_secret = ${PV_CLIENT_SECRET}
-scopes = openid profile email aws.cognito.signin.user.admin
+;scopes = openid profile email aws.cognito.signin.user.admin
+scopes = openid profile email 
 #auth_url = https://${PV_AUTH_DOMAIN}/oauth2/authorize
 #token_url = https://${PV_AUTH_DOMAIN}/oauth2/token
 #api_url = https://${PV_AUTH_DOMAIN}/oauth2/userInfo
