--- a/grafana/Dockerfile.template
+++ b/grafana/Dockerfile.template
@@ -7,7 +7,8 @@ USER root
 RUN ln -s /usr/share/grafana/public /usr/share/grafana/grafana && \
     apt update && \
     apt upgrade -y && \
-    apt install -y netcat-traditional
+    apt install -y netcat-traditional && \
+    echo force
 
    
 USER grafana
@@ -21,7 +22,7 @@ COPY --chown=grafana:grafana grafana.ini /etc/grafana/grafana-pontus.ini
 
 EXPOSE 3000
 
-ARG FORCE_REACT_PANEL=1 
+ARG FORCE_REACT_PANEL=4 
 ENV FORCE_REACT_PANEL=${FORCE_REACT_PANEL}
 RUN echo ${FORCE_REACT_PANEL}
 COPY  --chown=grafana:grafana  --from=pontusvisiongdpr/pontus-grafana-react-panel:${TAG}  /var/lib/grafana/plugins/grafana/pontus-panel/ /var/lib/grafana/plugins/grafana/pontus-panel/
