--- a/grafana-lambda/grafana.ini
+++ b/grafana-lambda/grafana.ini
@@ -180,8 +180,8 @@ cookie_secure = false
 cookie_samesite = lax
 
 # set to true if you want to allow browsers to render Grafana in a <frame>, <iframe>, <embed> or <object>. default is false.
-allow_embedding = false
-;allow_embedding = true
+;allow_embedding = false
+allow_embedding = true
 
 # Set to true if you want to enable http strict transport security (HSTS) response header.
 # This is only sent when HTTPS is enabled in this configuration.
@@ -237,7 +237,7 @@ allow_org_create = true
 auto_assign_org = true
 
 # Default role new users will be automatically assigned (if disabled above is set to true)
-auto_assign_org_role = Admin
+auto_assign_org_role = Viewer
 
 # Background text for the user field on the login page
 ;login_hint = email or username
@@ -252,10 +252,10 @@ default_theme = light
 ;external_manage_info =
 
 # Viewers can edit/inspect dashboard settings in the browser. But not save the dashboard.
-viewers_can_edit = true
+viewers_can_edit = false
 
 # Editors can administrate dashboard, folders and teams they create
-editors_can_admin = true
+editors_can_admin = false
 
 [auth]
 # Login cookie name
@@ -501,6 +501,10 @@ level = debug
 # Default setting for max attempts to sending alert notifications. Default value is 3
 ;max_attempts = 3
 
+[unified_alerting]
+enabled = true
+
+
 #################################### Explore #############################
 [explore]
 # Enable the Explore section
@@ -591,4 +595,4 @@ enabled           = false
 [plugins]
 ;enable_alpha = false
 ;app_tls_skip_verify_insecure = false
-
+allow_loading_unsigned_plugins = pontusvision-panel 
