--- a/grafana-pt/grafana.ini
+++ b/grafana-pt/grafana.ini
@@ -125,7 +125,7 @@ log_queries =
 ;timeout = 30
 
 # If enabled and user is not anonymous, data proxy will add X-Grafana-User header with username into the request, default is false.
-;send_user_header = false
+send_user_header = true
 
 #################################### Analytics ####################################
 [analytics]
@@ -151,7 +151,7 @@ log_queries =
 #################################### Security ####################################
 [security]
 # default admin user, created on startup
-;admin_user = admin
+admin_user = lmartins@pontusnetworks.com
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
 ;admin_password = admin
@@ -223,13 +223,13 @@ allow_embedding = true
 allow_sign_up = true
 
 # Allow non admin users to create organizations
-allow_org_create = true
+allow_org_create = false
 
 # Set to true to automatically assign new users to the default organization (id 1)
 auto_assign_org = true
 
 # Default role new users will be automatically assigned (if disabled above is set to true)
-auto_assign_org_role = Admin
+auto_assign_org_role = Viewer
 
 # Background text for the user field on the login page
 ;login_hint = email or username
@@ -244,29 +244,29 @@ default_theme = light
 ;external_manage_info =
 
 # Viewers can edit/inspect dashboard settings in the browser. But not save the dashboard.
-viewers_can_edit = true
+viewers_can_edit = false
 
 # Editors can administrate dashboard, folders and teams they create
 editors_can_admin = true
 
 [auth]
 # Login cookie name
-;login_cookie_name = grafana_session
+login_cookie_name = grafana_session
 
 # The lifetime (days) an authenticated user can be inactive before being required to login at next visit. Default is 7 days,
-;login_maximum_inactive_lifetime_days = 7
+login_maximum_inactive_lifetime_days = 1
 
 # The maximum lifetime (days) an authenticated user can be logged in since login time before being required to login. Default is 30 days.
-;login_maximum_lifetime_days = 30
+login_maximum_lifetime_days = 1
 
 # How often should auth tokens be rotated for authenticated users when being active. The default is each 10 minutes.
 ;token_rotation_interval_minutes = 10
 
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
-disable_login_form = false
+disable_login_form = true
 
 # Set to true to disable the signout link in the side menu. useful if you use auth.proxy, defaults to false
-disable_signout_menu = true
+disable_signout_menu = false
 
 # URL to redirect the user to after sign out
 signout_redirect_url = http://localhost:18443/grafana/
@@ -479,6 +479,8 @@ mode = console
 
 # Default setting for max attempts to sending alert notifications. Default value is 3
 ;max_attempts = 3
+[unified_alerting]
+enabled = true
 
 #################################### Explore #############################
 [explore]
@@ -565,9 +567,10 @@ mode = console
 
 [panels]
 # If set to true Grafana will allow script tags in text panels. Not recommended as it enable XSS vulnerabilities.
-;disable_sanitize_html = false
+disable_sanitize_html = true
 
 [plugins]
 ;enable_alpha = false
 ;app_tls_skip_verify_insecure = false
+allow_loading_unsigned_plugins = pontusvision-panel
 
