--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -479,6 +479,8 @@ mode = console
 
 # Default setting for max attempts to sending alert notifications. Default value is 3
 ;max_attempts = 3
+[unified_alerting]
+enabled = true
 
 #################################### Explore #############################
 [explore]
@@ -570,4 +572,6 @@ mode = console
 [plugins]
 ;enable_alpha = false
 ;app_tls_skip_verify_insecure = false
+
+allow_loading_unsigned_plugins = pontusvision-panel
 
