disabled centrailised alerts

--- a/grafana-pt/grafana.ini
+++ b/grafana-pt/grafana.ini
@@ -456,7 +456,7 @@ mode = console
 #################################### Alerting ############################
 [alerting]
 # Disable alerting engine & UI features
-;enabled = true
+enabled = true
 # Makes it possible to turn off alert rule execution but alerting UI is visible
 ;execute_alerts = true
 
@@ -480,7 +480,7 @@ mode = console
 # Default setting for max attempts to sending alert notifications. Default value is 3
 ;max_attempts = 3
 [unified_alerting]
-enabled = true
+enabled = false
 
 #################################### Explore #############################
 [explore]
