--- a/grafana-pt/grafana.ini
+++ b/grafana-pt/grafana.ini
@@ -8,6 +8,7 @@
 
 # instance name, defaults to HOSTNAME environment variable value or hostname if HOSTNAME var is empty
 ;instance_name = ${HOSTNAME}
+force_migration = true
 
 #################################### Paths ####################################
 [paths]
@@ -459,7 +460,6 @@ mode = console
 enabled = true
 # Makes it possible to turn off alert rule execution but alerting UI is visible
 ;execute_alerts = true
-
 # Default setting for new alert rules. Defaults to categorize error and timeouts as alerting. (alerting, keep_state)
 ;error_or_timeout = alerting
 
